@@ -3,9 +3,23 @@ plugins {
 }
 
 group 'com.derongan.minecraft'
-version '1.3-SNAPSHOT'
+version '1.4-SNAPSHOT'
 
 sourceCompatibility = 17
+
+tasks.withType(JavaCompile).configureEach {
+    sourceCompatibility = 17
+    options.compilerArgs
+            << "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
+            << "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
+            << "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
+            << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+}
+
+configurations {
+    shade
+    implementation.extendsFrom shade
+}
 
 repositories {
     mavenCentral()
@@ -20,13 +34,12 @@ repositories {
 //Make it chubby
 jar {
     from {
-        configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.shade.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT"
-    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.4.12'
-    implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
+    shade group: 'io.github.classgraph', name: 'classgraph', version: '4.4.12'
     //testCompileOnly group: 'junit', name: 'junit', version: '4.12'
 }
